2006-01-22  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-file.c: Add an icon to the export button in
	the generic filename dialog.

	* src/gnome-utils/glade/commodity.glade:
	* src/gnome/dialog-price-editor.c:
	* src/gnome/glade/progress.glade:
	* src/gnome/glade/price.glade:
	* src/gnome/dialog-price-edit-db.c: More HIG changes.

	* src/scm/printing/print-check.scm:
	* src/gnome/glade/print.glade:
	* src/gnome/schemas/Makefile.am:
	* src/gnome/schemas/apps_gnucash_dialog_common.schemas.in:
	* src/gnome/schemas/apps_gnucash_dialog_print_checks.schemas.in:
	* src/gnome/dialog-print-check.[ch]: Overhaul the print check
	dialog.  Make HIG changes, and make the dialog remember its state
	across invocations (including all the custom values).  Fix a crash
	when canceling printing.

	* src/register/ledger-core/dialog-dup-trans.c:
	* src/gnome-utils/dialog-account.c:
	* src/gnome-utils/glade/commodity.glade:
	* src/gnome-utils/glade/exchange-dialog.glade:
	* src/gnome/dialog-totd.c:
	* src/gnome/glade/stocks.glade:
	* src/gnome/glade/budget.glade:
	* src/gnome/glade/totd.glade:
	* src/gnome/glade/register.glade:
	* src/gnome/glade/account.glade:
	* src/gnome/druid-stock-split.c: More HIG changes.

	* src/gnome-utils/gnc-date-edit.[ch]:
	* src/gnome-utils/gnc-general-select.[ch]: Add support for setting
	these widgets as the target of a GtkLabel access key.

2006-01-21  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-amount-edit.c:
	* src/gnome/dialog-fincalc.c:
	* src/gnome/glade/fincalc.glade: Overhaul the financial calculator
	dialog.

2006-01-21  Derek Atkins  <derek@ihtfp.com>

	* src/bin/gnucash-bin.c:  update splash screen while loading modules.
	  Granted, this has no effect because the splash screen isn't
	  /UP/ when we're loading the modules.  But still, once we
	  initialize the gnome application earlier this will let us
	  update the splash screen.

	* src/app-utils/prefs.scm: replace an API needed by old scheme